--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,4 @@ services:
     ports:
       - 3000:3000
     environment:
-      - GITHUB_ACCESS_TOKEN=your_github_access_token
+      - GITHUB_ACCESS_TOKEN
